完成几何算法:PackageWrap_JarvisMarch，求点集的最小外包多边形

--- a/src/GraphAlgorithms/GraphAlgorithms.csproj
+++ b/src/GraphAlgorithms/GraphAlgorithms.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,12 +28,15 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LitMath">
+      <HintPath>..\..\3rdParty\LitMath.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -41,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Dijkstra\Dijkstra.cs" />
     <Compile Include="Dijkstra\Test.cs" />
+    <Compile Include="PackageWrap_JarvisMarch\PackageWrap.cs" />
+    <Compile Include="PackageWrap_JarvisMarch\Test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
